# BVH-based-Collision-Detection-Scheme

./: .gitignore  CMakeLists.txt  CV_DMTet.ipynb
Source/Project/Mine/: entry_cudaproject.cpp
Source/Project/Mine/Frameworks/AppBase/: Main.h
Source/Project/Mine/base/: Bv.h  MultiArray.h  MultiObject.h
Source/Project/Mine/collision/bvtt_front/: BVTTFront.h
Source/Project/Mine/collision/lbvh/: LBvh.h  LBvhBuildKernels.cu  LBvhFixedDeformable.cu  LBvhFixedDeformable.h  LBvhRigid.h
Source/Project/Mine/collision/narrow_phase/: narrow_phase.cu
Source/Project/Mine/setting/: CDBenchmarkSettings.h
Source/Project/Mine/system/CudaDevice/: CudaDevice.h
Source/Project/Mine/system/Log/: Logger.hpp
Source/Project/Mine/system/Logic/: BenchmarkLogic.hpp
Source/Project/Mine/utility/: CudaDeviceUtils.cu  CudaHostUtils.h  ModelReader.hpp
Source/Project/Mine/world/: Scene.cpp
cmake/: BVH_Dependencies.cmake  BVH_DownloadExternal.cmake  DownloadProject.CMakeLists.cmake.in
